css/pages/home.css
/* ================= HERO SECTION ================= */

/* Mobile first */
.hero {
  width: 100%;
  max-width: 1604px;
  margin: 0 auto;
  background-color: #fcac6d;
}

.hero__container {
  width: 100%;
}

.hero__banner_mobile {
  width: 100%;
}

.hero__banner_mobile img {
  display: block;
  width: 100%;
  height: auto;
}

.hero__content {
  width: 100%;
  padding: 15px 10px;
}

.hero__title {
  font-size: 26px;
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 16px;
}

.hero__text p {
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 24px;
}

.hero__actions {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 12px;
}

.hero__btn {
  display: inline-flex;
  align-items: center;
  gap: 8px;
  width: fit-content;
  padding: 12px 20px;
  border-radius: 30px;
  font-weight: 600;
  text-decoration: none;
}

.hero__btn--primary {
  background-color: rgba(32, 32, 32, 0.6);
  color: var(--color-white);
}

.hero__btn--secondary {
  border: 2px solid rgba(32, 32, 32, 0.6);
  color: rgb(20, 20, 20);
}

.hero__btn:hover {
  text-decoration: underline;
  background-color: rgba(0, 0, 0, 0.67);
}

.hero__btn--secondary:hover {
  color: var(--color-white);
}

.hero__icon {
  width: 18px;
  height: 18px;
}

/* Tablet */
@media (min-width: 768px) {
  .hero {
    min-height: 400px;
    display: flex;
    align-items: center;
    background-image: url("../../assets/pages/home/background/lego-easter-hero-banner-tablet.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
  }

  .hero__banner_mobile {
    display: none;
  }

  .hero__content {
    max-width: 400px;
    margin-left: 30px;
    padding: 0;
  }

  .hero__title {
    font-size: 30px;
  }

  .hero__actions {
    gap: 16px;
  }
}

/* Desktop */
@media (min-width: 1025px) {
  .hero {
    min-height: 499px;
    background-image: url("../../assets/pages/home/background/lego-easter-hero-banner-desktop.jpg");
  }

  .hero__content {
    max-width: 520px;
  }

  .hero__title {
    font-size: 40px;
  }

  .hero__actions {
    flex-direction: row;
  }
}

/* ================= SECTION FEATURED ================= */

.section-featured {
  position: relative;
  width: 100%;
  max-width: 1604px;
  margin: 0 auto 72px;
  padding: 16px 0 0;
  background: var(--color-dark);
  overflow: visible;
}

.section-featured::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 0px;

  width: calc(100% + 4px);
  height: 72px;

  background-color: var(--color-dark);

  -webkit-mask-image: url("../../assets/global/icons/header-decorative-bg.svg");
  mask-image: url("../../assets/global/icons/header-decorative-bg.svg");

  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;

  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;

  -webkit-mask-position: top left;
  mask-position: top left;

  pointer-events: none;
}

.section-featured__title {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  white-space: nowrap;
  border: 0;
  clip: rect(0, 0, 0, 0);
}

.section-featured__navigation {
  display: flex;
  gap: 20px;
  padding: 2px 5px 4px;
}

.section-featured__nav-link {
  position: relative;
  padding-bottom: 6px;
  font-family: "Nunito", sans-serif;
  font-size: 9px;
  font-weight: 700;
  color: #dbd8d4;
  text-decoration: none;
}

.section-featured__nav-link:hover::after,
.section-featured__nav-link:focus::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -4px;
  width: 100%;
  height: 3px;
  border-radius: 2px;
  background-color: var(--color-white);
}

.section-featured__cards {
  display: flex;
  gap: 7px;
  padding-bottom: 20px;
  overflow-x: auto;
  overflow-y: hidden;
}

.section-featured__cards::-webkit-scrollbar {
  height: 4px;
}

.section-featured__cards::-webkit-scrollbar-track {
  background-color: gray;
}

.section-featured__cards::-webkit-scrollbar-thumb {
  border-radius: 2px;
  background-color: var(--color-white);
}

.section-featured__card {
  position: relative;
  flex: 0 0 100px;
  height: 152px;
  overflow: hidden;
  text-decoration: none;
}

.section-featured__card img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.section-featured__card-title {
  position: absolute;
  z-index: 2;
  top: 20px;
  left: 50%;
  width: 90%;
  margin: 0;
  transform: translateX(-50%);
  font-family: var(--font-family);
  font-size: 14px;
  font-weight: 900;
  line-height: 1.3;
  text-align: center;
  color: #dbd8d4;
}

.section-featured__cards:hover .section-featured__card img {
  filter: brightness(0.5);
}

.section-featured__cards .section-featured__card:hover img {
  filter: brightness(1);
}

.section-featured__card img {
  transition: filter 0.3s ease;
}

/* Tablet */
@media (min-width: 768px) {
  .section-featured {
    padding: 20px 20px 10px;
  }

  .section-featured__navigation {
    padding: 10px 20px 20px;
  }

  .section-featured__nav-link {
    font-size: 9px;
  }

  .section-featured__cards {
    gap: 7px;
    padding-left: 0;
    padding-bottom: 13px;
    overflow-x: visible;
  }

  .section-featured__card {
    flex-basis: 135px;
    height: 200px;
  }

  .section-featured__card-title {
    font-size: 13px;
  }

  .section-featured__card-title br {
    display: none;
  }

  .section-featured__cards::-webkit-scrollbar {
    height: 2px;
  }
}

/* Desktop */
@media (min-width: 1025px) {
  .section-featured {
    padding: 20px;
  }

  .section-featured__navigation {
    padding: 10px 20px 20px;
  }

  .section-featured__nav-link {
    font-size: 14px;
  }

  .section-featured__cards {
    gap: 10px;
    padding-left: 10px;
  }

  .section-featured__card {
    flex-basis: 185px;
    height: 260px;
  }

  .section-featured__card-title {
    font-size: 1.2rem;
  }
}

/* ================= SECTION 3: PERFECT SET ================= */

/* Base mobile */
.perfect-set {
  width: 100%;
  max-width: 1604px;
  margin: 0 auto;
  padding: 24px 0 32px;
}
/* ... */

